--- a/Gamf/MainWindow.xaml
+++ b/Gamf/MainWindow.xaml
@@ -8,5 +8,7 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Label>TEST</Label>
+        <TextBox></TextBox>
+        <Button>Gomb</Button>
     </Grid>
 </Window>
